--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
-	<html>
+
+	<html lang="en">
+
+		<head>
+
+			<link href="styles.css" rel="stylesheet" />
+			<script type="text/javascript" src="javascript.js"></script>
+
+		</head>
+
 		<body>
+
 			<h1>Andrew Phillip Gonzalez</h1>
-				<p>Portfolio</p>
+			<p>Portfolio</p>
+
+			<script src="https://code.jquery.com/jquery-latest.min.js"></script>
+			<script type="text/javascript" src="javascript_Temp.js"></script>
 		</body>
+
 	</html>
