--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 
 		<body>
 
-			<h1>Andrew Phillip Gonzalez</h1>
-			<p>Portfolio</p>
-
+			<div class="Brief_bar">
+				
+			</div>
+			
 			<script src="https://code.jquery.com/jquery-latest.min.js"></script>
 			<script type="text/javascript" src="javascript_Temp.js"></script>
 		</body>
