--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<body>
 
 			<div class="Brief_bar">
-				<img src="\Img\Profile_0.jpg"
+				<img src="Img\Profile_0.jpg"
 			</div>
 			
 			<script src="https://code.jquery.com/jquery-latest.min.js"></script>
