--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 		<body>
 
 			<div class="Brief_bar">
-				<img src="Img\Profile_0.jpg"
+				<img src="Img/Profile_0.jpg" />
+				<div class="bottom_left">Andrew Phillip Gonzalez</div>
 			</div>
 			
 			<script src="https://code.jquery.com/jquery-latest.min.js"></script>
